# VelloSharp

./: .gitignore  .gitmodules  Cargo.toml  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  NuGet.Config  README.md  STATUS.md  VelloSharp.sln  check-pagination.js  preprocessed.xml
.cargo/: config.toml
.github/workflows/: build-pack.yml  ci.yml  docs.yml  release.yml
HarfBuzzSharp/: GlyphStructs.cs  HarfBuzzSharp.csproj  Tag.cs
VelloSharp/: AccessKitActionRequest.cs  AccessKitNativeMethods.cs  AssemblyInfo.cs  InteropTypes.cs  NativeHelpers.cs  NativeLibraryLoader.cs  NativeMethods.cs  ParleyLayout.cs  ParleyNativeMethods.cs  ParleyTypes.cs  Velato.cs  VelloRenderer.cs  VelloScene.cs  VelloSharp.csproj  VelloSurface.cs  VelloSvg.cs  VelloTypes.cs  Wgpu.cs  WinitEventLoop.cs  WinitNativeMethods.cs
VelloSharp.Avalonia.Vello/: VelloApplicationExtensions.cs  VelloPlatform.cs  VelloPlatformOptions.cs  VelloSharp.Avalonia.Vello.csproj  VelloTextServices.cs
VelloSharp.Avalonia.Vello/Geometry/: GeometryUtilities.cs  VelloCombinedGeometryImpl.cs  VelloGeometryGroupImpl.cs  VelloGeometryImplBase.cs  VelloLineGeometryImpl.cs  VelloPathBuilderExtensions.cs  VelloPathData.cs  VelloPathGeometryImpl.cs  VelloStreamGeometryImpl.cs  VelloTransformedGeometryImpl.cs
VelloSharp.Avalonia.Vello/Rendering/: IVelloApiLeaseFeature.cs  VelloBitmapImpl.cs  VelloDrawingContextImpl.cs  VelloFontManager.cs  VelloFontManagerImpl.cs  VelloGlyphRunImpl.cs  VelloGlyphTypeface.cs  VelloGraphicsDevice.cs  VelloPlatformRenderInterface.cs  VelloPlatformRenderInterfaceContext.cs  VelloRegionImpl.cs  VelloSwapchainRenderTarget.cs  VelloTextShaper.cs  WgpuSurfaceRenderContext.cs
VelloSharp.Avalonia.Winit/: VelloSharp.Avalonia.Winit.csproj
VelloSharp.Avalonia.Winit/Platform/: WinitAccessKitManager.cs  WinitClipboard.cs  WinitCursorFactory.cs  WinitDispatcher.cs  WinitKeyCodeMapper.cs  WinitPlatform.cs  WinitScreenManager.cs  WinitWindowImpl.cs  WinitWindowingPlatform.cs
VelloSharp.Integration/: VelloSharp.Integration.csproj
VelloSharp.Integration/Avalonia/: AppBuilderExtensions.cs  VelloSurfaceView.cs  VelloView.cs
VelloSharp.Integration/Rendering/: RenderTargetDescriptor.cs  VelloRenderPath.cs
VelloSharp.Integration/Skia/: SkiaRenderBridge.cs
VelloSharp.Skia/: PaintBrush.cs  SKBitmap.cs  SKCanvas.cs  SKCodec.cs  SKColor.cs  SKDrawable.cs  SKFont.cs  SKGeometry.cs  SKImageInfo.cs  SKPaint.cs  SKPath.cs  SKPixmap.cs  SKSurface.cs  SKTextBlob.cs  SKTypeface.cs  VelloSharp.Skia.csproj
VelloSharp.Skia/IO/: SKStreamAsset.cs  SkiaImageDecoder.cs
VelloSharp.Text/: ParleyFontService.cs  TextOptions.cs  VelloTextShaperCore.cs
accesskit_ffi/: Cargo.toml
docs/: AvaloniaSkiaRendering.md  GraphicsFeatureToggleStrategy.md  LimitedVelloFeaturePlan.md  SharedGraphicsAbstractionProposal.md  SharedModuleDependencyPlan.md  SkiaSharpShimBaseline.md  SkiaSharpShimImplementationRoadmap.md  SkiaSharpShimPlan.md  VelloAvaloniaIntegrationPlan.md  VelloAvaloniaVelloRendering.md  VelloSkiaConfigurationGaps.md  avalonia-vello-browser-webgpu-integration-plan.md  avalonia-vello-harfbuzz-sample-plan.md  avalonia-vello-renderer-plan.md  avalonia-vello-skiasharp-sample-plan.md  avalonia-winit-platform-plan.md  ci-release-process.md  ffi-api-coverage.md  hardbuzzsharp-shim-api-coverage.md  hardbuzzsharp-shim-completion-plan.md  maui-vello-full-gpu-integration-plan.md  maui-vello-getting-started.md  realtime-charts-library-plan.md  realtime-dcs-scada-visualization-plan.md  realtime-gauges-library-plan.md  realtime-tree-datagrid-plan.md  realtime-visualization-master-plan.md  skiasharp-shim-api-coverage.md  skiasharp-shim-completion-plan.md  unified-visual-editor-plan.md  uno-binding-plan.md  uno-phase1-baseline.md  vello-ffi-project-split-plan.md  vello-sharp-split-plan.md  vello-skia-migration-plan.md  vello-skia-skia-usage.csv  vello-text-stack-integration-plan.md  vello-webgpu-ffi-abi.md  vellosharp-v0.5.0-alpha.1-release-overview.txt  vellosharp-v0.5.0-alpha.2-release-overview.txt  (+5 more)
ffi/benchmarks/: Cargo.toml
ffi/benchmarks/src/: main.rs
ffi/chart-engine/: Cargo.toml
ffi/chart-engine/src/: lib.rs
ffi/composition/: Cargo.toml
ffi/composition/src/: animation.rs  constraints.rs  interop.rs  layout.rs  lib.rs  linear_layout.rs  materials.rs  panels.rs  scene_cache.rs  text.rs  virtualization.rs
ffi/experimental/editor_canvas_prototype/: Cargo.toml
ffi/experimental/editor_canvas_prototype/src/: lib.rs  main.rs
ffi/experimental/scada_dashboard/: Cargo.toml
ffi/experimental/scada_dashboard/src/: lib.rs  main.rs
ffi/image_codec_ffi/: Cargo.toml
ffi/image_codec_ffi/src/: lib.rs
ffi/vello_ffi/: Cargo.toml
ffi/vello_ffi/src/: ffi_filters.rs  lib.rs  windows_shared_texture.rs
ffi/vello_sparse_ffi/: Cargo.toml
ffi/vello_sparse_ffi/src/: lib.rs
ffi/vello_webgpu_ffi/: Cargo.toml
ffi/vello_webgpu_ffi/src/: lib.rs  types.rs  wasm.rs
integration/: Directory.Build.targets
kurbo_ffi/: Cargo.toml
parley_ffi/: Cargo.toml
parley_ffi/src/: lib.rs
peniko_ffi/: Cargo.toml
peniko_ffi/src/: lib.rs
scripts/: README.md  bootstrap-linux.sh  bootstrap-macos.sh  bootstrap-windows.ps1  build-docs.ps1  build-docs.sh  build-integrations.ps1  build-integrations.sh  build-native-android.ps1  build-native-android.sh  build-native-linux.ps1  build-native-linux.sh  build-native-macos.ps1  build-native-macos.sh  build-native-wasm.ps1  build-native-wasm.sh  build-native-windows.ps1  build-samples.ps1  build-samples.sh  build-wasm-vello.ps1  build-wasm-vello.sh  collect-native-artifacts.sh  copy-runtimes.ps1  copy-runtimes.sh  pack-managed-nugets.ps1  pack-managed-nugets.sh  pack-native-nugets.ps1  pack-native-nugets.sh  remove-runtimes.ps1  remove-runtimes.sh  report_skia_usage.sh  run-docfx-site.ps1  run-docfx-site.sh  run-docs-site.ps1  run-docs-site.sh  run-integration-tests.ps1  run-integration-tests.sh  run-uwp-gallery.ps1  run-winui-gallery.ps1  sync-dotnet-api-docs.ps1  (+6 more)
vello_ffi/: Cargo.toml
vello_ffi/src/: lib.rs
winit_ffi/: Cargo.toml
winit_ffi/src/: lib.rs
(+1369 files in other folders)
