[workspace]
resolver = "2"
members = [
    "ffi/accesskit_ffi",
    "ffi/vello_ffi",
    "ffi/kurbo_ffi",
    "ffi/peniko_ffi",
    "ffi/winit_ffi",
    "ffi/vello_sparse_ffi",
    "ffi/experimental/poc_line_scene",
    "ffi/experimental/gauges_prototypes",
    "ffi/experimental/editor_canvas_prototype",
    "ffi/experimental/scada_dashboard",
    "ffi/benchmarks",
    "ffi/composition",
    "ffi/chart-data",
    "ffi/chart-diagnostics",
    "ffi/chart-engine",
    "ffi/editor-core",
    "ffi/tree-datagrid",
    "ffi/gauges-core",
    "ffi/scada-runtime",
    "ffi/vello_webgpu_ffi",
    "ffi/image_codec_ffi",
]
exclude = [
    "extern/Avalonia",
    "extern/SkiaSharp",
    "extern/accesskit",
    "extern/fontations",
    "extern/harfbuzz_rs",
    "extern/kurbo",
    "extern/parley",
    "extern/peniko",
    "extern/peniko_shim",
    "extern/swash",
    "extern/velato",
    "extern/vello",
    "extern/vello_svg",
    "extern/wgpu",
    "extern/winit",
    "extern/xilem",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/wieslawsoltes/VelloSharp"
homepage = "https://github.com/wieslawsoltes/VelloSharp"
authors = ["VelloSharp Contributors"]
keywords = ["graphics"]
categories = ["gui"]

[workspace.lints]
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unexpected_cfgs = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.shadow_unrelated = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"

[workspace.dependencies]
vello = { version = "0.5.0", path = "extern/vello/vello" }
vello_encoding = { version = "0.5.0", path = "extern/vello/vello_encoding" }
vello_shaders = { version = "0.5.0", path = "extern/vello/vello_shaders" }
bytemuck = { version = "1.23.0", features = ["derive"] }
skrifa = { version = "0.31.3", default-features = false, features = ["autohint_shaping"] }
peniko = { package = "peniko_shim", path = "extern/peniko_shim", default-features = false }
kurbo = { path = "extern/kurbo/kurbo", default-features = false }
futures-intrusive = "0.5.0"
smallvec = "1.15.1"
static_assertions = "1.1.0"
thiserror = "2.0.12"
core_maths = "0.1"
oxipng = { version = "9.1.5", default-features = false }
png = "0.17.16"
rayon = { version = "1.10.0" }
thread_local = "1.1.8"
crossbeam-channel = "0.5.15"
ordered-channel = { version = "1.2.0", features = ["crossbeam-channel"] }
fearless_simd = { version = "0.2.0", default-features = false }
vello_api = { path = "extern/vello/sparse_strips/vello_api", default-features = false }
vello_common = { version = "0.0.1", path = "extern/vello/sparse_strips/vello_common", default-features = false }
vello_cpu = { path = "extern/vello/sparse_strips/vello_cpu" }
vello_hybrid = { path = "extern/vello/sparse_strips/vello_hybrid" }
vello_sparse_shaders = { path = "extern/vello/sparse_strips/vello_sparse_shaders" }
vello_example_scenes = { path = "extern/vello/sparse_strips/vello_example_scenes" }
vello_dev_macros = { path = "extern/vello/sparse_strips/vello_dev_macros" }
wgpu = { version = "26.0.1", default-features = false, features = ["std", "wgsl"] }
log = "0.4.27"
image = { version = "0.25.6", default-features = false }
clap = "4.5.38"
anyhow = "1.0.98"
pollster = "0.4.0"
web-time = "1.1.0"
wgpu-profiler = "0.24.0"
scenes = { path = "extern/vello/examples/scenes" }
svg = "0.18.0"
criterion = { version = "0.5.1", default-features = false }
rand = { version = "0.9.1", default-features = false, features = ["std_rng"] }
usvg = { version = "0.45.1" }
once_cell = "1.21.3"
serde_json = "1.0.137"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
time = "0.3.36"
proc-macro2 = "1.0.95"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
quote = "1.0.40"
raw-window-handle = "0.6.2"
accesskit = "0.21.0"
harfrust = { version = "0.2.0", default-features = false }
hashbrown = "0.15.3"
read-fonts = { version = "0.34.0", default-features = false }
swash = { version = "0.2.5", default-features = false }
fontique = { version = "0.5.0", default-features = false }
parley = { version = "0.5.0", default-features = false }
font-test-data = { path = "extern/fontations/font-test-data" }
font-types = { path = "extern/fontations/font-types" }
write-fonts = { path = "extern/fontations/write-fonts" }
shared-brotli-patch-decoder = { path = "extern/fontations/shared-brotli-patch-decoder", default-features = false }
incremental-font-transfer = { path = "extern/fontations/incremental-font-transfer" }
klippa = { path = "extern/fontations/klippa" }

[patch.crates-io]
vello = { path = "extern/vello/vello" }
vello_svg = { path = "extern/vello_svg" }
velato = { path = "extern/velato" }
peniko = { package = "peniko_shim", path = "extern/peniko_shim" }
