[package]
name = "accesskit_ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C bindings for the AccessKit accessibility schema"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
accesskit = { workspace = true, features = ["serde"] }
serde = { version = "1.0", features = ["alloc", "derive"] }
serde_json = "1.0"

[features]
default = []
