[package]
name = "peniko_ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C bindings for the peniko graphics types"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
peniko = { workspace = true, features = ["std"] }
kurbo = { workspace = true, features = ["std"] }

[features]
default = []
