[package]
name = "vello_ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C bindings for the Vello renderer"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
vello = { workspace = true }
wgpu = { workspace = true, features = ["std", "wgsl", "dx12", "metal", "vulkan", "gles"] }
pollster = { workspace = true }
peniko = { workspace = true }
kurbo = { workspace = true }
futures-intrusive = { workspace = true }
raw-window-handle = { workspace = true }

[features]
default = []
trace-paths = []
