[package]
name = "winit_ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C bindings for the winit windowing library"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
winit = { version = "0.30.12", features = ["rwh_06", "android-native-activity"] }
raw-window-handle = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
copypasta = "0.10.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
default = []
