[package]
name = "chart_benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
vello_chart_engine = { path = "../chart-engine" }
vello_chart_data = { path = "../chart-data" }
vello_chart_diagnostics = { path = "../chart-diagnostics" }
