[package]
name = "vello_ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C bindings for the Vello renderer"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
vello = { workspace = true, features = ["wgpu-profiler"] }
wgpu = { workspace = true, features = ["std", "wgsl", "dx12", "metal", "vulkan", "gles"] }
wgpu-profiler = "0.24"
pollster = { workspace = true }
futures-intrusive = { workspace = true }
raw-window-handle = { workspace = true }
vello_svg = { version = "0.7.1", default-features = false }
velato = { version = "0.6.0" }
parley = { workspace = true, default-features = false, features = ["std", "system"] }
fontique = { workspace = true, default-features = false, features = ["std", "system"] }
skrifa = { workspace = true, default-features = false, features = ["std"] }
swash = { workspace = true, default-features = false, features = ["std", "scale"] }
harfrust = { workspace = true }
png = "0.17"
once_cell = "1.19"
read-fonts = { workspace = true }
image = { version = "0.24", default-features = false, features = ["ico", "png"] }
linesweeper = "0.1"
kurbo_v11 = { package = "kurbo", version = "0.11", default-features = true }

[features]
default = []
trace-paths = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
harfbuzz_rs = { path = "../../extern/harfbuzz_rs", default-features = false, features = ["build-native-harfbuzz"] }
[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D11on12",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_System_WinRT"
] }
